--- a/main.scss
+++ b/main.scss
@@ -46,6 +46,13 @@ form label {
 article {
   max-width: 800px;
   text-align: justify;
+
+  img {
+    max-width: 100%;
+    float: left;
+    display: block;
+    margin: 0 10px 4px 0;
+  }
 }
 
 ul.posts {
