livros-traduzidos styles.

--- a/main.scss
+++ b/main.scss
@@ -70,3 +70,14 @@ ul.posts {
     font-size: 0.9em;
   }
 }
+
+table.livros-traduzidos {
+  desc {
+    padding-left: 30px;
+    vertical-align: top;
+  }
+
+  dd {
+    font-weight: bold;
+  }
+}
